# microNES

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  BRANCH_NOTES.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SCHEMATIC.md  cmake_install.cmake  compile_commands.json  index.html  micrones.js  micrones.wasm  pico_sdk_import.cmake
.claude/agents/: nes-test-agent.md
.claude/projects/-Users-bchelf-microNES/memory/: MEMORY.md  feedback_obs_space.md  project_rl_rnd.md
.github/workflows/: deploy-web.yml
hardware/microNES_pcb_v0.1/: fp-lib-table  microNES_pcb_v0.1.kicad_pcb  microNES_pcb_v0.1.kicad_prl  microNES_pcb_v0.1.kicad_pro  microNES_pcb_v0.1.kicad_sch  microNES_symbols.bak  microNES_symbols.kicad_sym  sym-lib-table  ~microNES_pcb_v0.1.kicad_pro.lck  ~microNES_pcb_v0.1.kicad_sch.lck
hardware/microNES_pcb_v0.1/BOM/: microES_pcb_v0.2-all-pos.csv  microES_v2_BOM.csv  microNES_pcb_v0.1-all-pos.csv  microNES_pcb_v0.1_BOM.csv
hardware/microNES_pcb_v0.1/gerbers/: microNES_pcb_v0.1-B_Cu.gbr  microNES_pcb_v0.1-B_Mask.gbr  microNES_pcb_v0.1-B_Paste.gbr  microNES_pcb_v0.1-B_Silkscreen.gbr  microNES_pcb_v0.1-Edge_Cuts.gbr  microNES_pcb_v0.1-F_Cu.gbr  microNES_pcb_v0.1-F_Mask.gbr  microNES_pcb_v0.1-F_Paste.gbr  microNES_pcb_v0.1-F_Silkscreen.gbr  microNES_pcb_v0.1-In1_Cu.gbr  microNES_pcb_v0.1-In2_Cu.gbr  microNES_pcb_v0.1-NPTH.drl  microNES_pcb_v0.1-PTH.drl  microNES_pcb_v0.1-job.gbrjob
hardware/microNES_pcb_v0.1/lcsc/: C116501.kicad_sym  C18080.kicad_sym  C265104.kicad_sym  C393941.kicad_sym  C42411118.kicad_sym  C42411119.kicad_sym  C47546.kicad_sym
hardware/microNES_pcb_v0.1/lcsc/C116501.pretty/: KEY-SMD_4P-L4.2-W3.2-P2.20-LS4.6.kicad_mod
hardware/microNES_pcb_v0.1/lcsc/C165948.pretty/: USB-C_SMD-TYPE-C-31-M-12_1.kicad_mod
hardware/microNES_pcb_v0.1/lcsc/C18080.3dshapes/: CONN-TH_AV-5.wrl
hardware/microNES_pcb_v0.1/lcsc/C18080.pretty/: CONN-TH_AV-5.kicad_mod
hardware/microNES_pcb_v0.1/lcsc/C265104.3dshapes/: CONN-SMD_S5B-PH-SM4-TB-LF-SN.step  CONN-SMD_S5B-PH-SM4-TB-LF-SN.wrl
hardware/microNES_pcb_v0.1/lcsc/C265104.pretty/: CONN-SMD_S5B-PH-SM4-TB-LF-SN.kicad_mod
hardware/microNES_pcb_v0.1/lcsc/C393941.pretty/: TF-SMD_TF-PUSH.kicad_mod
hardware/microNES_pcb_v0.1/lcsc/C42411118.pretty/: QFN-60_L7.0-W7.0-P0.40-TL-EP3.4.kicad_mod
hardware/microNES_pcb_v0.1/lcsc/C42411119.pretty/: IND-SMD_L2.0-W1.6_AOTA-B201610S3R3-101-T.kicad_mod
hardware/microNES_pcb_v0.1/lcsc/C47546.pretty/: SOT-23-3_L3.0-W1.7-P0.95-LS2.9-BR.kicad_mod
hardware/microNES_pcb_v0.1/microNES_footprints.pretty/: CONN-SMD_S5B-PH-SM4-TB-LF-SN.kicad_mod  CONN-TH_AV-5.kicad_mod  IND-SMD_L2.0-W1.6_AOTA-B201610S3R3-101-T.kicad_mod  KEY-SMD_4P-L4.2-W3.2-P2.20-LS4.6.kicad_mod  L_pol_2016.kicad_mod  NES_1x7_CustomPitch.kicad_mod  NES_Power_Reset_LED_5pin.kicad_mod  RCA_BOOMELE_AV5.kicad_mod  RP2350-QFN-60-1EP_7x7_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod  TF-SMD_TF-PUSH.kicad_mod  USB-C_SMD-TYPE-C-31-M-12_1.kicad_mod  Untitled.kicad_mod  Untitled_1.kicad_mod  logo-silkscreen.kicad_mod  logo2-silkscreen.kicad_mod
hardware/microNES_pcb_v0.1/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
papers/: README.md
rl/: CLAUDE.md  diag_castle_end.py  diag_level_select.py  diag_level_xmap.py  diag_tile_audit.py  eval_callback.py  eval_smb.py  level_config.py  micrones_rl.c  micrones_rl.h  nes_ctypes.py  plateau_detector.py  record_level.py  requirements.txt  rnd.py  running_mean_std.py  smb_env.py  train_smb_rl.py  wrappers.py
src/: main.c  video_ntsc.pio
src/common/: app_shell.c  app_shell.h  apu.c  apu.h  apu_ines.c  apu_ines.h  apu_infones.c  apu_infones.h  apu_legacy.c  apu_legacy.h  apu_micrones.c  apu_micrones.h  axrom.c  axrom.h  cart.c  cart.h  cnrom.c  cnrom.h  colordreams.c  colordreams.h  cpu6502.c  cpu6502.h  cpu6502_opcode.c  cpu6502_opcode.h  font_5x7.c  font_5x7.h  frame_pacer.c  frame_pacer.h  framebuffer.h  gxrom.c  gxrom.h  input.c  input.h  mapper40.c  mapper40.h  mmc1.c  mmc1.h  mmc2.c  mmc2.h  mmc3.c  (+22 more)
src/esp32s3/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
src/esp32s3/main/: CMakeLists.txt  audio.c  audio.h  board.h  display.c  display.h  main.c  nes_hw_controller.c  nes_input.c  nes_input.h  nes_video.c  nes_video.h  touch.c  touch.h  ui.c  ui.h
src/host/: audio_sdl.c  audio_sdl.h  camera_sdl.c  camera_sdl.h  hdmi_data_island_test.c  png_write.c  png_write.h  rom_source_posix.c  rom_source_posix.h  run_main.c  save_state_store_posix.c  save_state_store_posix.h  smoke_main.c  test_main.c  video_capture.c  video_capture.h  wav_write.c  wav_write.h  window_sdl.c  window_sdl.h
src/pico/: audio_i2s_max98357.c  audio_i2s_max98357.h  audio_i2s_max98357.pio  audio_pwm.c  audio_pwm.h  audio_sigma_delta.h  board_pinout_v0_1.h  clock_config.h  core1_video.c  core1_video.h  emulator_video_adapter.c  emulator_video_adapter.h  emulator_video_adapter_hdmi.c  emulator_video_adapter_tft.c  fat32.c  fat32.h  hdmi_data_island.c  hdmi_data_island.h  hdmi_test_pattern.c  main.c  nes_hw_controller.c  pico_audio_backend.h  pico_audio_backend_hdmi.c  pico_audio_backend_max98357.c  pico_audio_backend_pwm.c  pico_input.c  pico_input.h  pico_status.c  pico_status.h  pico_time.c  pico_time.h  pico_video_backend.h  pico_video_backend_analog.c  pico_video_backend_hdmi.c  pico_video_backend_tft.c  rom_source_flash_cache.c  rom_source_flash_cache.h  rom_source_flash_fs.c  rom_source_flash_fs.h  rom_source_sd.c  (+20 more)
src/pico/display/: display_config.h  display_parallel_8080.c  display_parallel_8080.h  display_spi_ili9341.c  display_transport.h  parallel_tft.pio  tft_controller.h  tft_controller_ili9341.c  tft_controller_ili9486.c  tft_controller_ili9488.c  video_tft.c  video_tft.h
src/web/: index.html  web_main.c
tests/: audio_sigma_delta_test.c  menu_smoke.c  save_state_smoke.c  test_savestates.py
tests/scripts/: accuracycoin_p13_14.txt  test_input.txt
tools/: play_game.py  replay_inspector.py
